# WyrmCC

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ci.sh  nested-git-paths.txt  progress.txt  run.sh  rustfmt.toml
.github/workflows/: ci.yml
crates/backend/: Cargo.toml
crates/backend/src/: lib.rs
crates/backend/tests/: arith_conversions.rs  array_init.rs  arrays.rs  arrays_decay.rs  arrays_multid.rs  arrays_of_records.rs  arrays_of_structs.rs  assignop.rs  casts.rs  cfg_basic.rs  comma.rs  cond.rs  do_while.rs  global_aggregate_init.rs  global_aggregates_ir.rs  globals.rs  goto.rs  incdec.rs  indirect_call.rs  linkage.rs  (+17 more)
crates/driver/: Cargo.toml
crates/driver/src/: main.rs
crates/driver/tests/: ast_smoke.rs  build_run_smoke.rs  cli_exit_semantics.rs  cli_include.rs  cli_output.rs  cli_smoke.rs  control_flow.rs  emit_llvm_smoke.rs  multi_tu.rs  pp_driver.rs  run_agg_init.rs  run_arith_conversions.rs  run_bits_cmp.rs  run_control_flow.rs  run_exprs.rs  run_fn_ptr.rs  run_global_init.rs  run_params.rs  run_pointers.rs  run_printf.rs  run_printf_flags.rs  run_printf_hex.rs  run_printf_mixed.rs  run_printf_more.rs  run_printf_pointer.rs  run_printf_unsigned.rs  run_ptr_scaling.rs  run_puts.rs  run_static_locals.rs  run_struct_assign.rs  run_timeouts.rs  run_timeouts_descendants.rs  run_uac.rs  run_uac_more.rs  sizeof_align_ints.rs
crates/ir/: Cargo.toml
crates/lex/: Cargo.toml
crates/parse/: Cargo.toml
crates/pp/: Cargo.toml
crates/runtime/: Cargo.toml
crates/sema/: Cargo.toml
scripts/: guarded-test.sh
tests/: run_uac.rs
(+61 files in other folders)
