[package]
name = "wyrmcc"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
which = "6.0"
tempfile = "3.10"
lex = { path = "../lex" }
backend = { path = "../backend" }
parse = { path = "../parse" }
sema = { path = "../sema" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"